# ComputationalPhysics

./: .gitignore  CMakeLists.txt  backup.md
src/: CMakeLists.txt  PlotGraph.cpp
src/chapter1/: CMakeLists.txt  DataVisualizer.cpp  Lissajous.cpp  MiniGolf.cpp  ProjectileAirResistance.cpp  SimplePendulum.cpp  box1D_1.cpp  box2D.cpp  circle.cpp  projectile.cpp
src/chapter2/: CMakeLists.txt
